@startuml
title TP - Versión reducida (MVC + State, Strategy, Observer, Adapter)

package "MVC" {
  class AppController
  class PartidoView
  class PartidoModel

  AppController --> PartidoModel : usa
  AppController --> PartidoView : actualiza
}

package "Dominio" {
  class Usuario {
    - username: String
    - email: String
    - nivel: Nivel
  }

  package "Catálogos (desde BD)" {
    class Nivel {
      - id: Long
      - nombre: String
    }
    class Deporte {
      - id: Long
      - nombre: String
    }
  }

  class Partido {
    - deporte: Deporte
    - jugadoresRequeridos: int
    - jugadores: List<Usuario>
    - estado: PartidoState
    + agregarJugador(u: Usuario)
    + setEstado(s: PartidoState)
  }
  Usuario --> Nivel : referencia
  Partido --> Deporte : referencia
}

package "State (Estados de Partido)" {
  interface PartidoState {
    + onJugadorAgregado(p: Partido)
    + onTiempoComienzo(p: Partido)
    + cancelar(p: Partido)
  }

  class NecesitamosJugadores
  class PartidoArmado
  class Confirmado
  class EnJuego
  class Finalizado
  class Cancelado

  Partido --> PartidoState
  PartidoState <|.. NecesitamosJugadores
  PartidoState <|.. PartidoArmado
  PartidoState <|.. Confirmado
  PartidoState <|.. EnJuego
  PartidoState <|.. Finalizado
  PartidoState <|.. Cancelado
}

package "Strategy (Emparejamiento)" {
  interface EmparejamientoStrategy {
    + emparejar(candidatos: List<Usuario>, partido: Partido): List<Usuario>
  }
  class EmparejamientoPorNivel
  class EmparejamientoPorCercania
  class EmparejamientoPorHistorial

  EmparejamientoStrategy <|.. EmparejamientoPorNivel
  EmparejamientoStrategy <|.. EmparejamientoPorCercania
  EmparejamientoStrategy <|.. EmparejamientoPorHistorial

  class MatchmakingService {
    - strategy: EmparejamientoStrategy
    + setStrategy(s: EmparejamientoStrategy)
    + sugerir(partido: Partido): List<Usuario>
  }

  MatchmakingService --> EmparejamientoStrategy
}

package "Observer + Adapter (Notificaciones)" {
  interface Observer {
    + update(evento: String, partido: Partido)
  }

  class NotificacionSubject {
    - observers: List<Observer>
    + attach(o: Observer)
    + detach(o: Observer)
    + notify(evento: String, p: Partido)
  }

  NotificacionSubject <|-- Partido : subject

  ' Adapter target
  interface NotificationClient {
    + send(destino: String, asunto: String, cuerpo: String)
  }

  ' Adapters concretos
  class JavaMailAdapter implements NotificationClient
  class FirebasePushAdapter implements NotificationClient

  ' Observers que delegan en adapters
  class EmailObserver implements Observer {
    - client: NotificationClient
  }
  class PushObserver implements Observer {
    - client: NotificationClient
  }

  EmailObserver --> NotificationClient
  PushObserver --> NotificationClient
}

' Integraciones clave
PartidoModel --> MatchmakingService : consulta sugerencias
PartidoModel --> NotificacionSubject : emite eventos
AppController --> NotificacionSubject : alta de observers

note right of Partido
  Estados requeridos:
  - "Necesitamos jugadores"
  - "Partido armado"
  - "Confirmado"
  - "En juego"
  - "Finalizado"
  - "Cancelado"
end note

legend right
  Esta versión reducida muestra:
  - MVC básico (Controller, View, Model)
  - State para ciclo de vida del Partido
  - Strategy para emparejamiento
  - Observer para eventos de partido
  - Adapter para proveedores de notificación
end legend

@enduml

